# Rubiks

./: .gitignore  README.md  bittest.py  docker-compose.yml  kien_t.py  main.py  package-lock.json  pre-commit.ps1  pre-commit.sh  pyproject.toml  t.py  t_2.py  tempCodeRunnerFile.py
.github/workflows/: ci.yml
Solvers/: alg_base.py  alg_solver.py  domino_cube.py  domino_solver.py
backend/: Dockerfile  api.py  main.py  pyproject.toml  utils.py
backend/Solvers/: alg_base.py  alg_solver.py  domino_solver.py
backend/Solvers/astar/: __init__.py  astar.py  helpers.py  node.py
backend/moves/: sequence.py  sequenses.json
backend/tests/: test_eo_to_dr.py  test_heuristics.py  test_is_goal_functions.py  test_node.py  test_sequence.py  test_solver.py  test_sucsessor.py
docs/manuals/: environment.md
frontend/: Dockerfile  package-lock.json
frontend/public/: index.html
frontend/rubiks-cube/: package-lock.json  package.json
frontend/rubiks-cube/src/: customCube.js  customMoves.js  three-app.js
frontend/src/: App.js  customMoves.js  index.js  three-app.js
frontend/src/logic/: index.js
tests/: test_solver.py
