[tool.poetry]
name = "rubiks cube solver"
version = "0.0.1"
description = "CogitoNTNU Rubiks cube solver project"
package-mode = false

license = "MIT"

authors = [
    "Eduard Prokhorikhin <eduardprokhorikhin@gmail.com>",
    "Einride Brodahl Osland <einrideosland@gmail.com>",
    "Even Ytterli Tokle <Even.Ytterli.Tokle@gmail.com>",
    "Gustav Natvig <gusnatvig@gmail.com>",
    "Kien Parajes Le <kienleparajes@gmail.com>",
    "Vetle Rød Dahl <vetlerod@gmail.com>",
    "Viljen Apalset Vassbø <viljen.vassbo@gmail.com>",
]

repository = "https://github.com/CogitoNTNU/Rubiks"

readme = ["README.md", "LICENCE"]

[tool.poetry.dependencies]
python = "^3.12"
magiccube = "^0.3.0"
pytest = "^8.3.3"
fastapi = {extras = ["standard"], version = "^0.114.2"}
portalocker = "^2.10.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pylint = "^3.2.6"
pymarkdownlnt = "^0.9.22"
coverage = "^7.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint]
disable = ["C0114", "C0115", "C0116"]
max-line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: mark test as slow",
    "heuristic: mark test as heuristic"
]
norecursedirs = [".git", ".venv", "node_modules"]
minversion = "6.0"
